Cambios agregamos mas texto

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hola mundo</h1>
     <p>Este es un párrafo que dice "Hola Mundo"</p>
+    <p>Este es otro texto</p>
 </body>
 </html>
